added not found page; changed tsconfig alias; worked on watchList and watch components; created db dictionary; etc.

--- a/src/app/components/watch/watch.style.scss
+++ b/src/app/components/watch/watch.style.scss
@@ -1,6 +1,9 @@
 .card-watch {
-
+    display: inline-block;
+    
     max-width: 300px;
+    padding: 5px;
+    margin: 5px;
 
     &__image {
         &_img {
@@ -10,9 +13,7 @@
     }
 
     &__price {
-        font-size: 1.5rem;
         &_price {
-
             &-old {
                 text-decoration: line-through;
                 color: gray;
