--- a/src/app/pages/landing/top-watches/top-watches.template.html
+++ b/src/app/pages/landing/top-watches/top-watches.template.html
@@ -15,7 +15,8 @@
 
     <br/>
     
-    <louis-watch></louis-watch>
+    <!-- <louis-watch></louis-watch> -->
+    <louis-watch-watchList take="3"></louis-watch-watchList>
 
     <br/>
 
