worked on the admin routing

--- a/src/app/specific-rights/admin/pages/stuff/stuff.template.html
+++ b/src/app/specific-rights/admin/pages/stuff/stuff.template.html
@@ -1,3 +1,10 @@
 <h2>
     Панель управления
 </h2>
+
+<a [routerLink]="['create']">Создать</a>
+<a [routerLink]="['delete']">Удалить</a>
+<a [routerLink]="['update']">Обновить</a>
+
+<router-outlet></router-outlet>
+
