--- a/src/app/specific-rights/admin/admin.template.html
+++ b/src/app/specific-rights/admin/admin.template.html
@@ -1,5 +1,5 @@
 <div class="admin-wrapper">
     <div class="admin-content">
-        <louis-admin-index></louis-admin-index>
+        <router-outlet></router-outlet>
     </div>
 </div>
