worked on addSpace pipe

--- a/src/app/components/watch/watch.template.html
+++ b/src/app/components/watch/watch.template.html
@@ -14,7 +14,7 @@
         </div>
         <div class="card-watch__image text-center">
             <a href="{{watch.id}}">
-                <img class="card-watch__image_img" src="{{watch.image}}" alt="{{watch.name}}" />
+                <img class="card-watch__image_img" src="{{watchMock.image}}" alt="{{watch.name}}" />
             </a>
         </div>
         <div class="card-watch__price">
