--- a/src/app/specific-rights/admin/admin.template.html
+++ b/src/app/specific-rights/admin/admin.template.html
@@ -1,5 +1,9 @@
 <div class="admin-wrapper">
     <div class="admin-content">
+        <h2>
+            Админка
+        </h2>
+
         <router-outlet></router-outlet>
     </div>
 </div>
