--- a/src/app/specific-rights/admin/pages/stuff/formBase/formBase.template.html
+++ b/src/app/specific-rights/admin/pages/stuff/formBase/formBase.template.html
@@ -106,6 +106,7 @@
             </div>
             <div class="form-group">
                 <label for="isAvailable">Доступно?</label>
+                <louis-slider></louis-slider>
                 <input
                         name="isAvailable"
                         [(ngModel)]="isAvailable"
