--- a/src/app/ui/slider/slider.template.html
+++ b/src/app/ui/slider/slider.template.html
@@ -1,1 +1,12 @@
-
+<mat-slider
+        class="example-margin"
+        [disabled]="disabled"
+        [invert]="invert"
+        [max]="max"
+        [min]="min"
+        [step]="step"
+        [thumb-label]="thumbLabel"
+        [tick-interval]="tickInterval"
+        [(ngModel)]="value"
+        [vertical]="vertical">
+</mat-slider>
