-- working on base form; changed tslint rules

--- a/src/app/specific-rights/admin/pages/stuff/formBase/formBase.template.html
+++ b/src/app/specific-rights/admin/pages/stuff/formBase/formBase.template.html
@@ -83,7 +83,7 @@
                 <button
                         (click)="onReset()"
                         type="reset"
-                        mat-raised-button color="warn">Очистить
+                        mat-button color="warn">Очистить
                 </button>
 
                 <button
@@ -96,22 +96,37 @@
         <div class="col-md-5">
             <div class="form-group">
                 <label>Фото</label>
-                <div class="drop-container" ngFileDrop (uploadOutput)="onUploadOutput($event)"
-                     [ngClass]="{ 'is-drop-over': dragOver }" multiple>
-                    <h1>Drag &amp; Drop</h1>
+
+                <div class="image-load">
+                    <div class="image-load__field"></div>
+                    <div class="image-load__btn">
+                        <label for="images" class="btn btn-success image-load__btn_show">
+                            <i class="fa fa-cloud-upload"></i>{{ imageLoadBtnText }}
+                        </label>
+                        <input
+                                id="images"
+                                class="image-load__btn_hide"
+                                type="images"
+                                [(ngModel)]="images"
+                                (change)="onLoadImages($event)"
+                                name="images"
+                                accept="image/*"
+                                multiple>
+                    </div>
                 </div>
 
-                <label class="upload-button">
-                    <input type="file" ngFileSelect [options]="options" (uploadOutput)="onUploadOutput($event)"
-                           [uploadInput]="uploadInput" multiple>
-                    or choose file(s)
-                </label>
+                <div class="image-preview-wrapper">
+                    <ng-container *ngFor="let image of images">
+                        <img
+                                src="{{image.binary}}"
+                                alt="{{image.name}}"
+                                class="image form-image image-preview">
+                    </ng-container>
+                </div>
 
                 <button
-                        mat-raised-button
-                        type="button"
-                        class="start-upload-btn"
-                        (click)="removeAllFiles()">
+                    mat-button color="warn"
+                    (click)="onClearImages()">
                     Удалить все фото
                 </button>
             </div>
