--- a/src/app/specific-rights/admin/pages/stuff/formBase/formBase.template.html
+++ b/src/app/specific-rights/admin/pages/stuff/formBase/formBase.template.html
@@ -96,39 +96,7 @@
         <div class="col-md-5">
             <div class="form-group">
                 <label>Фото</label>
-
-                <div class="image-load">
-                    <div class="image-load__field"></div>
-                    <div class="image-load__btn">
-                        <label for="images" class="btn btn-success image-load__btn_show">
-                            <i class="fa fa-cloud-upload"></i>{{ imageLoadBtnText }}
-                        </label>
-                        <input
-                                id="images"
-                                class="image-load__btn_hide"
-                                type="images"
-                                [(ngModel)]="images"
-                                (change)="onLoadImages($event)"
-                                name="images"
-                                accept="image/*"
-                                multiple>
-                    </div>
-                </div>
-
-                <div class="image-preview-wrapper">
-                    <ng-container *ngFor="let image of images">
-                        <img
-                                src="{{image.binary}}"
-                                alt="{{image.name}}"
-                                class="image form-image image-preview">
-                    </ng-container>
-                </div>
-
-                <button
-                    mat-button color="warn"
-                    (click)="onClearImages()">
-                    Удалить все фото
-                </button>
+                <louis-upload-images></louis-upload-images>
             </div>
             <div class="form-group">
                 <label>Доступно?</label>
