-- refactored and worked on load images component; added output images

--- a/src/app/specific-rights/admin/pages/stuff/formBase/formBase.template.html
+++ b/src/app/specific-rights/admin/pages/stuff/formBase/formBase.template.html
@@ -96,7 +96,7 @@
         <div class="col-md-5">
             <div class="form-group">
                 <label>Фото</label>
-                <louis-upload-images></louis-upload-images>
+                <louis-upload-images (loadedImages)="loadedImages($event)"></louis-upload-images>
             </div>
             <div class="form-group">
                 <label>Доступно?</label>
