--- a/src/app/ui/upload-images/upload-images.style.scss
+++ b/src/app/ui/upload-images/upload-images.style.scss
@@ -15,9 +15,18 @@
       background: gray;
 
       &_text {
-        text-align: center;
-        color: white;
+        height: calc(100% - 20px);
+
+        display: block;
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
         transform: translateY(50%);
+        text-align: center;
+
+        color: white;
       }
     }
 
@@ -57,8 +66,18 @@
     }
 
     &__img {
+      margin: 1px 0;
       max-height: 100px;
       max-width: 100px;
+
+      &_main {
+        box-shadow: 0 0 10px gray;
+      }
+    }
+
+    &__hint {
+      margin-top: 5px;
+      text-align: left;
     }
 
   }
@@ -74,4 +93,3 @@
     }
   }
 }
-
