--- a/src/app/ui/upload-images/upload-images.template.html
+++ b/src/app/ui/upload-images/upload-images.template.html
@@ -31,7 +31,7 @@
                     src="{{image.binary}}"
                     alt="{{image.name}}"
                     class="image form-image image-preview__img"
-                    [ngClass]="image.isMain ? 'image-preview__img_main' : null">
+                    [ngClass]="image.isMain ? 'l-card' : null">
         </ng-container>
         <label
                 *ngIf="images.length"
