-- add catalog page(component)

--- a/src/app/pages/home/index-view/index-view.template.html
+++ b/src/app/pages/home/index-view/index-view.template.html
@@ -24,7 +24,7 @@
     <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
 
     <div class="text-center category-absolute goto-catalog__main">
-        <a href="#" class="btn btn-outline-neutral btn-round">
+        <a [routerLink]="'/catalog'" class="btn btn-outline-neutral btn-round">
             Перейти к каталогу <i class="nc-icon nc-bag-16"></i>
         </a>
     </div>
