--- a/src/app/pages/landing/top-watches/top-watches.template.html
+++ b/src/app/pages/landing/top-watches/top-watches.template.html
@@ -9,13 +9,13 @@
                 рейтингах. 
             </h5>
             <br>
-            <a href="#paper-kit" class="btn btn-danger btn-round">Каталог</a>
+            <a [routerLink]="'/catalog'" class="btn btn-danger btn-round">Каталог</a>
         </div>
     </div>
 
     <br/>
     
-    <louis-watch-watchList take="3"></louis-watch-watchList>
+    <louis-c-watch-watch-list take="3"></louis-c-watch-watch-list>
 
     <br/>
 
