--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -41,7 +41,9 @@
                     <a href="https://www.creative-tim.com/product/paper-kit-2-pro?ref=pk2-free-local" target="_blank" class="btn btn-danger btn-round disabled">Upgrade to Pro</a>
                 </li> -->
                 <li class="nav-item" *ngIf="!isHome()">
-                    <a [routerLink]="['/home']" *ngIf="!isDocumentation()" class="nav-link"><i class="nc-icon nc-layout-11"></i>Товары</a>
+                    <a [routerLink]="['/catalog']" *ngIf="!isDocumentation()" class="nav-link">
+                        <i class="nc-icon nc-layout-11"></i>Каталог
+                    </a>
                     <!-- <a [routerLink]="['/home']" *ngIf="isDocumentation()" class="nav-link">Back to Kit</a> -->
                 </li>
                 <li class="nav-item" *ngIf="isDocumentation()">
