--- a/src/app/pages/watch/watch.template.html
+++ b/src/app/pages/watch/watch.template.html
@@ -1,12 +1,15 @@
 <div class="wrapper">
-    <div class="page-header page-header-xs" data-parallax="true" style="background-image: url('../assets/img/fabio-mangione.jpg');">
+    <div
+            class="page-header page-header-xs"
+            data-parallax="true"
+            style="background-image: url('../assets/img/fabio-mangione.jpg');">
         <div class="filter"></div>
     </div>
     <div class="section profile-content">
         <div class="container">
             <div class="owner">
                 <div class="avatar">
-                    <img src="../assets/img/faces/joe-gardner-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                    <img src="" alt="Circle Image" class="img-circle img-no-padding img-responsive">
                 </div>
                 <div class="name">
                     <h4 class="title">Jane Faker<br /></h4>
