--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -20,7 +20,7 @@
       @extend %element-on-center;
     }
 
-    z-index: $l-position-max-z-index;
+    z-index: $l-size-position-max-z-index;
   }
 
   .form {
