--- a/src/app/common/styles/reusable.scss
+++ b/src/app/common/styles/reusable.scss
@@ -1,7 +1,8 @@
 %absolute-all-screen {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  right: 0;
   height: 100%;
   width: 100%;
 }
