--- a/src/app/components/loader/loader.template.html
+++ b/src/app/components/loader/loader.template.html
@@ -1,7 +1,7 @@
-<div class="container">
-    <div class="banner">
-        LOADING
-        <div class="banner-left"></div>
-        <div class="banner-right"></div>
+<div class="loader-wrapper">
+    <div class="loader__animation">
+        <div class="loader__animation_element"></div>
+        <div class="loader__animation_text">Идет загрузка</div>
     </div>
+    <div class="loader__background"></div>
 </div>
