-- watch page - used external lib to gallery image

--- a/src/app/common/styles/variables.scss
+++ b/src/app/common/styles/variables.scss
@@ -21,3 +21,7 @@ $l-size-position-max-z-index: 9999; // Should be used be temporary ui element
 
 // ====================== size
 $l-size-ui-animation: 35px;
+// border
+$l-size-border-radius-s: 2px;
+$l-size-border-radius-m: 5px;
+$l-size-border-radius-l: 10px;
