-- watch page - comments - unworked (unfinished\no logic)

--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -4,6 +4,17 @@
 
 ::ng-deep {
 
+  .l {
+
+    &-price {
+
+      &-old {
+        text-decoration: line-through;
+        color: gray;
+      }
+    }
+  }
+
   .l-clickable-element {
     cursor: pointer;
   }
