--- a/src/app/components/watch/watch.template.html
+++ b/src/app/components/watch/watch.template.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <ng-template #newPrice>
-                <div class="card-watch__price_price-old d-inline-block">
+                <div class="d-inline-block card-watch__price_price-old l-price-old">
                     {{watch.price | currencyPrice:'UAH' | toFixed: 2}}
                 </div>
                 <div class="card-watch__price_price d-inline-block">
