--- a/src/app/pages/watch/watch.template.html
+++ b/src/app/pages/watch/watch.template.html
@@ -20,11 +20,30 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 watch-page__image-wrapper">
+                <div class="col-md-6 watch-page__image-wrapper text-center">
                     <modal-gallery [modalImages]="imagesArray"></modal-gallery>
                 </div>
-                <div class="col-md-6 ml-auto mr-auto text-center">
-                    <p>{{watch.description}}</p>
+                <div class="col-md-6 ml-auto mr-auto">
+                    <div class="l-section watch-page__section">
+                        <h4>Описание</h4>
+                        <p>{{watch.description}}</p>
+                    </div>
+                    <div class="l-section watch-page__section">
+                        <h4>Цена</h4>
+                        <div *ngIf="!(watch.discount && watch.discount !== 0); else newPrice">
+                            <div class="card-watch__price_price d-inline-block">
+                                {{watch.price | priceShow:priceMap}}
+                            </div>
+                        </div>
+                        <ng-template #newPrice>
+                            <div class="d-inline-block card-watch__price_price-old l-price-old">
+                                {{watch.price | currencyPrice:'UAH' | toFixed: 2}}
+                            </div>
+                            <div class="card-watch__price_price d-inline-block">
+                                {{watch.price | priceShow:priceMap }}
+                            </div>
+                        </ng-template>
+                    </div>
                     <br />
                     <button class="btn btn-outline-default btn-round">
                         <i class="fa fa-shopping-bag"></i>
@@ -32,67 +51,10 @@
                     </button>
                 </div>
             </div>
+
             <br/>
-            <div class="nav-tabs-navigation">
-                <div class="nav-tabs-wrapper">
-                    <ngb-tabset [justify]="'center'">
-                        <ngb-tab title="Follows">
-                            <ng-template ngbTabContent >
-                                <div class="row following" id="follows">
-                                    <div class="col-md-6 ml-auto mr-auto">
-                                        <ul class="list-unstyled follows">
-                                            <li>
-                                                <div class="row">
-                                                    <div class="col-md-2 col-sm-2 ml-auto mr-auto">
-                                                        <img src="../assets/img/faces/clem-onojeghuo-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                                    </div>
-                                                    <div class="col-md-7 col-sm-4 ml-auto">
-                                                        <h6>Flume<br/><small>Musical Producer</small></h6>
-                                                    </div>
-                                                    <div class="col-md-3 col-sm-2 ml-auto mr-auto">
-                                                        <div class="form-check">
-                                                            <label class="form-check-label">
-                                                                <input class="form-check-input" type="checkbox" value="" checked="">
-                                                                <span class="form-check-sign"></span>
-                                                            </label>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                            <hr />
-                                            <li>
-                                                <div class="row">
-                                                    <div class="col-md-2 col-sm-2 ml-auto mr-auto">
-                                                        <img src="../assets/img/faces/ayo-ogunseinde-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                                    </div>
-                                                    <div class="col-md-7 col-sm-4 ml-auto">
-                                                        <h6>Banks<br /><small>Singer</small></h6>
-                                                    </div>
-                                                    <div class="col-md-3 col-sm-2 ml-auto mr-auto">
-                                                        <div class="form-check">
-                                                            <label class="form-check-label">
-                                                                <input class="form-check-input" type="checkbox" value="" checked="">
-                                                                <span class="form-check-sign"></span>
-                                                            </label>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </ng-template>
-                        </ngb-tab>
-                        <ngb-tab title="Following">
-                            <ng-template ngbTabContent>
-                                <h3 class="text-muted">Not following anyone yet :(</h3>
-                                <br>
-                                <button class="btn btn-warning btn-round">Find artists</button>
-                            </ng-template>
-                        </ngb-tab>
-                    </ngb-tabset>
-                </div>
-            </div>
+
+            <louis-watch-comments></louis-watch-comments>
         </div>
     </div>
 </div>
