--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -4,8 +4,14 @@
 
 ::ng-deep {
 
+  /*
+    Louis custom style
+   */
   .l {
 
+    /*
+      Price
+     */
     &-price {
 
       &-old {
@@ -13,46 +19,57 @@
         color: gray;
       }
     }
-  }
 
-  .l-clickable-element {
-    cursor: pointer;
-  }
+    /*
+      Other
+     */
+    &-clickable-element {
+      cursor: pointer;
+    }
 
-  .l-image {
+    &-override {
+      &-scratch {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: red;
+        z-index: $l-size-position-max-z-index;
+      }
+    }
 
-    &-preview {
-      max-width: 100px;
-      max-height: 100px;
+    /*
+      Image
+     */
+    &-image {
+
+      &-preview {
+        max-width: 100px;
+        max-height: 100px;
+      }
+    }
+
+
+    /*
+      Form
+     */
+    &-form {
+      &__controls {
+
+      }
     }
   }
 
-  .loading {
-
-    &-wrapper {
-      position: relative;
-    }
-
-    &-background {
-      @extend %absolute-all-screen;
-      background-color: gray;
-      opacity: 0.5;
-    }
-
-    &-loader {
-      @extend %element-on-center;
-    }
-
-    z-index: $l-size-position-max-z-index;
+  .clearfix:after {
+    content: '';
+    display: block;
+    clear: both;
   }
 
   .form {
     &__controls {
       float: right;
-
-      &:after {
-        clear: both;
-      }
     }
   }
 
@@ -60,5 +77,4 @@
     color: gray;
     font-size: x-small;
   }
-
 }
