--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -10,8 +10,8 @@
             </nav>
             <div class="credits ml-auto">
                 <span class="copyright">
-                    © {{date | date: 'yyyy'}}, сделано с <i class="fa fa-heart heart"></i> 
-                    <a href="https://github.com/danbilokha" target="_blank">danbilokha</a>
+                    © 2016 - {{date | date: 'yyyy'}}, сделано с <i class="fa fa-heart heart"></i>
+                    <a href="https://github.com/danbilokha" target="_blank">kaizen</a>
                 </span>
             </div>
         </div>
