-- created header component

--- a/src/app/pages/order/order.template.html
+++ b/src/app/pages/order/order.template.html
@@ -1,11 +1,6 @@
 <div class="l-wrapper order-wrapper">
 
-    <div
-            class="page-header page-header-xs"
-            data-parallax="true"
-            style="background-image: url('../assets/img/fabio-mangione.jpg');">
-        <div class="filter"></div>
-    </div>
+    <louis-c-header></louis-c-header>
 
     <div class="order-content">
         <h3>Оформьте предзаказ - получите скидку 20%!</h3>
