-- added image component; refactored; worked on order

--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -39,6 +39,16 @@
       }
     }
 
+    &-margin-s {
+      margin: $l-size-indents-s;
+    }
+    &-margin-m {
+      margin: $l-size-indents-m;
+    }
+    &-margin-l {
+      margin: $l-size-indents-l;
+    }
+
     /*
       Image
      */
