--- a/src/app/common/styles/variables.scss
+++ b/src/app/common/styles/variables.scss
@@ -17,11 +17,20 @@ $l-color-black: #000000;
   size
  */
 // ====================== position
+$l-size-s: 2px;
+$l-size-m: 5px;
+$l-size-l: 10px;
+$l-size-xl: 15px;
+$l-size-xxl: 25px;
+
 $l-size-position-max-z-index: 9999; // Should be used be temporary ui element
+$l-size-indents-s: $l-size-s;
+$l-size-indents-m: $l-size-m;
+$l-size-indents-l: $l-size-l;
 
 // ====================== size
 $l-size-ui-animation: 35px;
 // border
-$l-size-border-radius-s: 2px;
-$l-size-border-radius-m: 5px;
-$l-size-border-radius-l: 10px;
+$l-size-border-radius-s: $l-size-s;
+$l-size-border-radius-m: $l-size-m;
+$l-size-border-radius-l: $l-size-l;
