--- a/src/app/pages/order/order.template.html
+++ b/src/app/pages/order/order.template.html
@@ -1,46 +1,41 @@
-<div class="l-wrapper order-wrapper">
+<div
+        *ngIf="watch; else watchLoading"
+        class="l-wrapper order-wrapper">
 
     <louis-c-header></louis-c-header>
 
     <div class="order-content">
+
         <h3>Оформьте предзаказ - получите скидку 20%!</h3>
 
         <div class="row">
-            <div class="col-md-5">
-                <div *ngIf="watch">
-                    <div class="l-section">
-                        <img
-                                src="{{mainImage.binary}}"
-                                alt="{{mainImage.name}}"
-                                class="img-circle img-no-padding img-responsive">
-                    </div>
+            <div class="col-md-5 l-card ">
                     <div class="l-section">
                         <h4>Описание</h4>
                         <p>{{watch.description}}</p>
                     </div>
-                    <div class="l-section watch-page__section">
+                    <div class="l-section">
                         <h4>Цена</h4>
                         <div *ngIf="!(watch.discount && watch.discount !== 0); else newPrice">
-                            <div class="card-watch__price_price d-inline-block">
+                            <div class="d-inline-block">
                                 {{watch.price | priceShow:priceMap}}
                             </div>
                         </div>
                         <ng-template #newPrice>
-                            <div class="d-inline-block card-watch__price_price-old l-price-old">
+                            <div class="d-inline-block l-price-old">
                                 {{watch.price | currencyPrice:'UAH' | toFixed: 2}}
                             </div>
-                            <div class="card-watch__price_price d-inline-block">
+                            <div class="d-inline-block">
                                 {{watch.price | priceShow:priceMap }}
                             </div>
                         </ng-template>
                     </div>
-                </div>
             </div>
 
-            <div class="col-md-7">
+            <div class="col-md-7 l-card">
                 <form novalidate
                       [formGroup]="orderForm"
-                      class="l-card l-form order-form">
+                      class="l-form order-form">
 
                     <div class="l-form__group">
                         <mat-form-field>
@@ -71,5 +66,6 @@
     </div>
 </div>
 
-{{orderForm.value | json}}
-
+<ng-template #watchLoading>
+    <louis-loader></louis-loader>
+</ng-template>
