-- add reset; deleting paper styles

--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -49,6 +49,16 @@
       margin: $l-size-indents-l;
     }
 
+    &-padding-s {
+      padding: $l-size-indents-s;
+    }
+    &-padding-m {
+      padding: $l-size-indents-m;
+    }
+    &-padding-l {
+      padding: $l-size-indents-l;
+    }
+
     /*
       Image
      */
