--- a/src/app/pages/order/order.style.scss
+++ b/src/app/pages/order/order.style.scss
@@ -1,6 +1,6 @@
-@import '../../common/styles/variables.scss';
+@import '../../common/styles/variable';
 
-.order {
+.spec-order {
 
   &-content {
     margin-left: $l-size-xl;
