--- a/src/app/ui/upload-images/upload-images.template.html
+++ b/src/app/ui/upload-images/upload-images.template.html
@@ -35,7 +35,7 @@
         </ng-container>
         <label
                 *ngIf="images.length"
-                class="hint image-preview__hint">
+                class="l-helper-hint image-preview__hint">
             Картинка с рамкой будет отображаться как основная
         </label>
     </div>
