--- a/src/app/common/styles/card.scss
+++ b/src/app/common/styles/card.scss
@@ -1,10 +1,24 @@
-@import './variables.scss';
+@import 'variable';
 
 ::ng-deep {
 
   .l-card {
     padding: 5px;
     box-shadow: 0 0 5px $l-color-grey-2;
-  }
 
+    &-hoverable {
+
+      transition: transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
+        box-shadow 200ms ease,
+        -webkit-transform 300ms cubic-bezier(0.34, 2, 0.6, 1);
+
+      &:hover {
+        box-shadow: 0px 12px 19px -7px rgba(0, 0, 0, 0.3);
+        transform: translateY(-10px);
+        -webkit-transform: translateY(-10px);
+        -ms-transform: translateY(-10px);
+        -moz-transform: translateY(-10px);
+      }
+    }
+  }
 }
