--- a/src/app/common/styles/kill-library.scss
+++ b/src/app/common/styles/kill-library.scss
@@ -1,6 +1,11 @@
-@import './variables';
+@import 'variable';
 
 ::ng-deep {
+
+  h1,h2,h3,h4,h5,h6 {
+    margin: 0;
+  }
+
   // custom style
   a.close-popup.close-popup.close-popup {
     top: 75px;
