--- a/src/app/components/loader/loader.style.scss
+++ b/src/app/components/loader/loader.style.scss
@@ -1,4 +1,4 @@
-@import "../../common/styles/variables";
+@import "../../common/styles/variable";
 @import "../../common/styles/reusable";
 
 .loader {
