--- a/src/app/pages/order/order.template.html
+++ b/src/app/pages/order/order.template.html
@@ -4,17 +4,17 @@
 
     <louis-c-header></louis-c-header>
 
-    <div class="order-content">
+    <div class="spec-order-content">
 
         <h3>Оформьте предзаказ - получите скидку до 40%!</h3>
 
-        <div class="row l-padding-s l-margin-s">
-            <div class="col-md-5 l-card l-padding-l">
-                <div class="l-section">
+        <div class="row">
+            <div class="col-md-5 l-padding-l">
+                <div class="l-section d-inline-block l-card l-card-hoverable l-margin-m">
                     <h4>Описание</h4>
                     <p>{{watch.description}}</p>
                 </div>
-                <div class="l-section">
+                <div class="l-section d-inline-block l-card l-card-hoverable l-margin-m">
                     <h4>Цена</h4>
                     <div *ngIf="!(watch.discount && watch.discount !== 0); else newPrice">
                         <div class="d-inline-block">
@@ -31,19 +31,18 @@
                     </ng-template>
                 </div>
 
-                <louis-c-delimiter></louis-c-delimiter>
-
-                <div class="l-section">
+                <div class="l-section l-card l-margin-m">
+                    <h4>Фото</h4>
                     <louis-c-images [imagesArray]="watch.images"></louis-c-images>
                 </div>
             </div>
-
-            <div class="col-md-1"></div>
-
-            <div class="col-md-6 l-card l-padding-l">
+            <div class="col-md-7 l-padding-l">
+                <div class="l-card l-margin-m">
+                    <h4>Заявка на предзаказ</h4>
+                </div>
                 <form novalidate
                       [formGroup]="orderForm"
-                      class="l-form order-form">
+                      class="l-form l-card l-margin-m spec-order-form">
 
                     <div class="l-form__group">
                         <mat-form-field>
@@ -69,11 +68,16 @@
                         </mat-form-field>
                     </div>
 
-                    <div class="l-form__controls">
+                    <div class="l-form__controls l-helper-clearfix">
                         <button
                                 (click)="onSubmit()"
-                                class="btn btn-success">
+                                class="btn btn-success l-position-right l-margin-m-left">
                             Оставить заявку
+                        </button>
+                        <button
+                            (click)="onClean()"
+                            class="btn btn-secondary l-position-right">
+                            Очистить
                         </button>
                     </div>
                 </form>
